--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -3,9 +3,9 @@ run-name: Nightly build
 on:
   schedule:
     - cron: "0 0 * * *"
+  workflow_dispatch:
 
 jobs:
-
   config:
     runs-on: ubuntu-22.04
     name: Create martrix
@@ -64,11 +64,18 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Debug - Check current directory and files
+        run: |
+          pwd  # 输出当前工作目录
+          ls -la  # 列出所有文件，确认build.sh存在
+          ls -la config/suites/  # 确认suite配置文件存在
+
       - name: Set environment variables
         id: vars
         run: |
           source config/suites/${{ matrix.suite }}.sh
-          echo "suite_version=$RELASE_VERSION" >> $GITHUB_OUTPUT
+          # 修复变量名拼写错误：RELASE_VERSION → RELEASE_VERSION
+          echo "suite_version=$RELEASE_VERSION" >> $GITHUB_OUTPUT
 
       - name: Install dependencies
         shell: bash
@@ -80,17 +87,47 @@ jobs:
           udev dosfstools uuid-runtime git-lfs device-tree-compiler python2 python3 \
           python-is-python3 fdisk bc debhelper python3-pyelftools python3-setuptools \
           python3-distutils python3-pkg-resources swig libfdt-dev libpython3-dev dctrl-tools
+      
+      - name: Add execute permission to all shell scripts
+        run: |
+          # 给主脚本和子脚本批量加执行权限
+          chmod +x ./build.sh
+          chmod +x ./scripts/*.sh
+          # 验证权限
+          ls -la ./build.sh
+          ls -la ./scripts/build-rootfs.sh
 
-      - name: Build
+      - name: Build rootfs
         shell: bash
-        run: sudo ./build.sh --suite=${{ matrix.suite }} --flavor=${{ matrix.flavor }} --rootfs-only --launchpad
+        run: |
+          # 使用绝对路径执行，避免工作目录问题
+          sudo $GITHUB_WORKSPACE/build.sh --suite=${{ matrix.suite }} --flavor=${{ matrix.flavor }} --rootfs-only --launchpad
 
-      - name: Upload
+      - name: Debug - Check rootfs file generation
+        run: |
+          # 列出build目录下的所有文件，确认rootfs文件是否生成
+          echo "=== Build directory contents ==="
+          ls -la $GITHUB_WORKSPACE/build/
+          # 检查目标文件是否存在
+          TARGET_FILE="$GITHUB_WORKSPACE/build/ubuntu-${{ steps.vars.outputs.suite_version }}-preinstalled-${{ matrix.flavor }}-arm64.rootfs.tar.xz"
+          if [ -f "$TARGET_FILE" ]; then
+            echo "✅ Rootfs file exists: $TARGET_FILE"
+            # 打印文件大小，确认文件完整
+            du -h "$TARGET_FILE"
+          else
+            echo "❌ Rootfs file not found: $TARGET_FILE"
+            exit 1
+          fi
+
+      - name: Upload rootfs artifact
         uses: actions/upload-artifact@v4.3.3
         with:
             name: ubuntu-${{ steps.vars.outputs.suite_version }}-preinstalled-${{ matrix.flavor }}-arm64-rootfs
-            path: ./build/ubuntu-${{ steps.vars.outputs.suite_version }}-preinstalled-${{ matrix.flavor }}-arm64.rootfs.tar.xz
+            # 使用绝对路径，避免相对路径失效
+            path: ${{ github.workspace }}/build/ubuntu-${{ steps.vars.outputs.suite_version }}-preinstalled-${{ matrix.flavor }}-arm64.rootfs.tar.xz
             if-no-files-found: error
+            compression-level: 6
+            overwrite: false
 
   build:
     runs-on: ubuntu-22.04
@@ -112,17 +149,30 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Debug - Check current directory and files
+        run: |
+          pwd
+          ls -la
+          ls -la config/boards/
+
       - name: Set environment variables
         id: vars
         run: |
           source config/suites/${{ matrix.suite }}.sh
-          echo "suite_version=$RELASE_VERSION" >> $GITHUB_OUTPUT
+          # 修复变量名拼写错误
+          echo "suite_version=$RELEASE_VERSION" >> $GITHUB_OUTPUT
 
       - name: Checkout rootfs
         uses: actions/download-artifact@v4.1.2
         with:
             name: ubuntu-${{ steps.vars.outputs.suite_version }}-preinstalled-${{ matrix.flavor }}-arm64-rootfs
-            path: ./build/
+            # 下载到绝对路径的build目录
+            path: ${{ github.workspace }}/build/
+
+      - name: Debug - Check downloaded rootfs
+        run: |
+          echo "=== Downloaded rootfs files ==="
+          ls -la ${{ github.workspace }}/build/
 
       - name: Install dependencies
         shell: bash
@@ -135,17 +185,36 @@ jobs:
           python-is-python3 fdisk bc debhelper python3-pyelftools python3-setuptools \
           python3-distutils python3-pkg-resources swig libfdt-dev libpython3-dev dctrl-tools
 
-      - name: Build
-        shell: bash
-        run: sudo ./build.sh --board=${{ matrix.board }} --suite=${{ matrix.suite }} --flavor=${{ matrix.flavor }} --launchpad
+      - name: Add execute permission to all shell scripts
+        run: |
+          # 给主脚本和子脚本批量加执行权限
+          chmod +x ./build.sh
+          chmod +x ./scripts/*.sh
+          # 验证权限
+          ls -la ./build.sh
+          ls -la ./scripts/build-rootfs.sh
 
-      - name: Upload
+      - name: Build image
+        shell: bash
+        run: |
+          # 使用绝对路径执行，避免sudo切换用户后路径异常
+          sudo $GITHUB_WORKSPACE/build.sh --board=${{ matrix.board }} --suite=${{ matrix.suite }} --flavor=${{ matrix.flavor }} --launchpad
+
+      - name: Debug - Check image file generation
+        run: |
+          echo "=== Images directory contents ==="
+          ls -la ${{ github.workspace }}/images/
+
+      - name: Upload image artifact
         uses: actions/upload-artifact@v4.3.3
         with:
           name: ubuntu-${{ steps.vars.outputs.suite_version }}-preinstalled-${{ matrix.flavor }}-arm64-${{ matrix.board }}
-          path: ./images/ubuntu-*-preinstalled-${{ matrix.flavor }}-arm64-${{ matrix.board }}.*
+          # 使用绝对路径匹配镜像文件
+          path: ${{ github.workspace }}/images/ubuntu-*-preinstalled-${{ matrix.flavor }}-arm64-${{ matrix.board }}.*
           if-no-files-found: error
+          compression-level: 6
+          overwrite: false
 
       - name: Clean cache
         shell: bash
-        run: sync && sudo rm -rf ./images/ ./build/ && sync
+        run: sync && sudo rm -rf ${{ github.workspace }}/images/ ${{ github.workspace }}/build/ && sync
