--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -126,4 +126,178 @@ jobs:
 
       - name: Install dependencies (only if remote rootfs not found)
         if: steps.check_remote_rootfs.outputs.remote_exists == 'false'
-        shell: 
+        shell: bash
+        run: |
+          sudo apt-get update && sudo apt-get upgrade -y
+          sudo apt-get install -y build-essential gcc-aarch64-linux-gnu bison \
+          qemu-user-static qemu-system-arm qemu-efi u-boot-tools binfmt-support \
+          debootstrap flex libssl-dev bc rsync kmod cpio xz-utils fakeroot parted \
+          udev dosfstools uuid-runtime git-lfs device-tree-compiler python2 python3 \
+          python-is-python3 fdisk bc debhelper python3-pyelftools python3-setuptools \
+          python3-distutils python3-pkg-resources swig libfdt-dev libpython3-dev dctrl-tools
+
+      - name: Add execute permission to scripts (only if remote rootfs not found)
+        if: steps.check_remote_rootfs.outputs.remote_exists == 'false'
+        run: |
+          chmod +x ./build.sh
+          chmod +x ./scripts/*.sh
+          ls -la ./build.sh
+          ls -la ./scripts/build-rootfs.sh
+
+      - name: Build rootfs (only if remote rootfs not found)
+        if: steps.check_remote_rootfs.outputs.remote_exists == 'false'
+        shell: bash
+        run: |
+          sudo $GITHUB_WORKSPACE/build.sh --suite=${{ matrix.suite }} --flavor=${{ matrix.flavor }} --rootfs-only
+
+      - name: Debug - Check rootfs file
+        run: |
+          TARGET_FILE="${{ github.workspace }}/build/${{ steps.vars.outputs.rootfs_tar_name }}"
+          if [ -f "$TARGET_FILE" ]; then
+            echo "✅ Rootfs file exists: $TARGET_FILE"
+            du -h "$TARGET_FILE"
+          else
+            echo "❌ Rootfs file not found: $TARGET_FILE"
+            exit 1
+          fi
+
+      - name: Upload rootfs artifact
+        uses: actions/upload-artifact@v4.3.3
+        with:
+            name: ${{ env.ROOTFS_FILE_PREFIX }}-${{ steps.vars.outputs.suite_version }}-preinstalled-${{ matrix.flavor }}-${{ env.ROOTFS_ARCH }}-rootfs
+            path: ${{ github.workspace }}/build/${{ steps.vars.outputs.rootfs_tar_name }}
+            if-no-files-found: error
+            compression-level: 6
+            overwrite: false
+
+  build:
+    runs-on: ubuntu-22.04
+    needs: [rootfs, config]
+    name: Build image 
+    strategy:
+        matrix: ${{ fromJson(needs.config.outputs.build_matrix) }}
+    steps:
+      - name: Get more disk space
+        uses: jlumbroso/free-disk-space@main
+        with:
+          tool-cache: false
+          android: true
+          dotnet: true
+          haskell: true
+          large-packages: true
+          swap-storage: true
+
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Debug - Check current directory and files
+        run: |
+          pwd
+          ls -la
+          ls -la config/boards/
+
+      - name: Set environment variables
+        id: vars
+        run: |
+          source config/suites/${{ matrix.suite }}.sh
+          echo "suite_version=$RELEASE_VERSION" >> $GITHUB_OUTPUT
+
+      - name: Set DEB Asset Name
+        id: deb-asset
+        run: |
+          DEB_ZIP_NAME="deb-packages-${{ matrix.board }}-${{ matrix.suite }}.zip"
+          DEB_DOWNLOAD_URL="https://github.com/${{ env.REPO_OWNER }}/${{ env.REPO_NAME }}/releases/download/${{ env.RELEASE_TAG }}/${DEB_ZIP_NAME}"
+          echo "deb_zip_name=$DEB_ZIP_NAME" >> $GITHUB_OUTPUT
+          echo "deb_download_url=$DEB_DOWNLOAD_URL" >> $GITHUB_OUTPUT
+
+      - name: Install GitHub CLI (if missing)
+        run: |
+          if ! command -v gh &> /dev/null; then
+            sudo apt update && sudo apt install -y gh
+          fi
+          gh --version
+
+      - name: Authenticate GitHub CLI
+        run: echo "${{ secrets.GITHUB_TOKEN }}" | gh auth login --with-token
+
+      - name: Check if DEB ZIP exists in remote Release
+        id: check_remote_deb
+        run: |
+          gh release view ${{ env.RELEASE_TAG }} \
+            --repo ${{ env.REPO_OWNER }}/${{ env.REPO_NAME }} \
+            --json assets \
+            --jq ".assets[] | select(.name == \"${{ steps.deb-asset.outputs.deb_zip_name }}\") | .name" > /tmp/deb_asset_check.txt
+          if [ -s /tmp/deb_asset_check.txt ]; then
+            echo "✅ Found remote deb zip: ${{ steps.deb-asset.outputs.deb_zip_name }}"
+            echo "deb_remote_exists=true" >> $GITHUB_OUTPUT
+          else
+            echo "❌ Remote deb zip not found: ${{ steps.deb-asset.outputs.deb_zip_name }}"
+            echo "deb_remote_exists=false" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Download remote DEB zip (if exists)
+        if: steps.check_remote_deb.outputs.deb_remote_exists == 'true'
+        run: |
+          mkdir -p ${{ github.workspace }}/build
+          wget -O ${{ github.workspace }}/build/${{ steps.deb-asset.outputs.deb_zip_name }} ${{ steps.deb-asset.outputs.deb_download_url }}
+          ls -la ${{ github.workspace }}/build/${{ steps.deb-asset.outputs.deb_zip_name }}
+          unzip -o ${{ github.workspace }}/build/${{ steps.deb-asset.outputs.deb_zip_name }} -d ${{ github.workspace }}/build/
+          ls -la ${{ github.workspace }}/build/*.deb
+
+      # 如果没有deb zip,才编译并上传
+      - name: Install required build dependencies
+        if: steps.check_remote_deb.outputs.deb_remote_exists != 'true'
+        shell: bash
+        run: |
+          sudo apt-get update && sudo apt-get install -y build-essential device-tree-compiler u-boot-tools
+
+      - name: Build image
+        if: steps.check_remote_deb.outputs.deb_remote_exists != 'true'
+        shell: bash
+        run: |
+          sudo $GITHUB_WORKSPACE/build.sh --board=${{ matrix.board }} --suite=${{ matrix.suite }} --flavor=${{ matrix.flavor }}
+
+      - name: Upload DEB packages (artifact)
+        if: steps.check_remote_deb.outputs.deb_remote_exists != 'true'
+        uses: actions/upload-artifact@v4.3.3
+        with:
+          name: deb-packages-${{ matrix.board }}-${{ matrix.suite }}
+          path: ${{ github.workspace }}/build/*.deb
+          if-no-files-found: warn
+
+      - name: Make deb-packages zip
+        if: steps.check_remote_deb.outputs.deb_remote_exists != 'true'
+        run: |
+          set -e
+          mkdir -p ${{ github.workspace }}/releases
+          cd ${{ github.workspace }}/build
+          zip ${{ github.workspace }}/releases/deb-packages-${{ matrix.board }}-${{ matrix.suite }}.zip ./*.deb
+          ls -lh ${{ github.workspace }}/releases/
+
+      - name: Upload deb-packages zip to Release
+        if: steps.check_remote_deb.outputs.deb_remote_exists != 'true' && env.GITHUB_TOKEN != ''
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          gh release upload ${{ env.RELEASE_TAG }} \
+            ${{ github.workspace }}/releases/deb-packages-${{ matrix.board }}-${{ matrix.suite }}.zip \
+            --repo ${{ env.REPO_OWNER }}/${{ env.REPO_NAME }} \
+            --clobber
+
+      - name: Debug - Check image file generation
+        run: |
+          echo "=== Images directory contents ==="
+          ls -la ${{ github.workspace }}/images/
+
+      - name: Upload image artifact
+        uses: actions/upload-artifact@v4.3.3
+        with:
+          name: ${{ env.ROOTFS_FILE_PREFIX }}-${{ steps.vars.outputs.suite_version }}-preinstalled-${{ matrix.flavor }}-${{ env.ROOTFS_ARCH }}-${{ matrix.board }}
+          path: ${{ github.workspace }}/images/${{ env.ROOTFS_FILE_PREFIX }}-*-preinstalled-${{ matrix.flavor }}-${{ env.ROOTFS_ARCH }}-${{ matrix.board }}.*
+          if-no-files-found: error
+          compression-level: 6
+          overwrite: false
+
+      - name: Clean cache
+        shell: bash
+        run: sync && sudo rm -rf ${{ github.workspace }}/images/ ${{ github.workspace }}/build/ && sync
