Fix rootfs build directory creation and cache cleanup
Ensure directories exist before building rootfs and fix cache cleanup command.

--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -148,6 +148,8 @@ jobs:
         if: steps.check_remote_rootfs.outputs.remote_exists == 'false'
         shell: bash
         run: |
+          # ==== 关键修复: 构建前确保目录存在 ====
+          mkdir -p chroot/etc/default rootfs/dev
           sudo $GITHUB_WORKSPACE/build.sh --suite=${{ matrix.suite }} --flavor=${{ matrix.flavor }} --rootfs-only
 
       - name: Debug - Check rootfs file
