--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -252,6 +252,13 @@ jobs:
         run: |
           sudo apt-get update && sudo apt-get install -y build-essential device-tree-compiler u-boot-tools
 
+      # 新增：确保 images 和 build 目录存在，避免后续报错
+      - name: Ensure images and build directories exist
+        shell: bash
+        run: |
+          mkdir -p ${{ github.workspace }}/images
+          mkdir -p ${{ github.workspace }}/build
+
       - name: Build image 并忽略DTS相关错误
         if: steps.check_remote_deb.outputs.deb_remote_exists != 'true'
         shell: bash
@@ -262,32 +269,11 @@ jobs:
           true
         continue-on-error: true
 
-      - name: Upload DEB packages (artifact)
-        if: steps.check_remote_deb.outputs.deb_remote_exists != 'true'
-        uses: actions/upload-artifact@v4.3.3
-        with:
-          name: deb-packages-${{ matrix.board }}-${{ matrix.suite }}
-          path: ${{ github.workspace }}/build/*.deb
-          if-no-files-found: warn
-
-      - name: Make deb-packages zip
-        if: steps.check_remote_deb.outputs.deb_remote_exists != 'true'
+      # 再次确保 images 目录存在，方便后面 ls 和 upload 操作（有些脚本build不产出目录防御性保险处理）
+      - name: Ensure images directory exists (pre-upload/debug)
+        shell: bash
         run: |
-          set -e
-          mkdir -p ${{ github.workspace }}/releases
-          cd ${{ github.workspace }}/build
-          zip ${{ github.workspace }}/releases/deb-packages-${{ matrix.board }}-${{ matrix.suite }}.zip ./*.deb
-          ls -lh ${{ github.workspace }}/releases/
-
-      - name: Upload deb-packages zip to Release
-        if: steps.check_remote_deb.outputs.deb_remote_exists != 'true' && env.GITHUB_TOKEN != ''
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          gh release upload ${{ env.RELEASE_TAG }} \
-            ${{ github.workspace }}/releases/deb-packages-${{ matrix.board }}-${{ matrix.suite }}.zip \
-            --repo ${{ env.REPO_OWNER }}/${{ env.REPO_NAME }} \
-            --clobber
+          mkdir -p ${{ github.workspace }}/images
 
       - name: Debug - Check image file generation
         run: |
