--- a/definitions/ubuntu-rootfs-desktop.yaml
+++ b/definitions/ubuntu-rootfs-desktop.yaml
@@ -1,59 +1,57 @@
 name: ubuntu-rootfs
 display-name: Ubuntu rootfs ARM64
-revision: 1
+revision: 2
 architecture: arm64
 series: plucky
 class: preinstalled
+kernel: linux-generic
 rootfs:
   archive: ubuntu
-  # sources-list-deb822: true
   components:
     - main
     - restricted
     - universe
     - multiverse
   mirror: "http://ports.ubuntu.com/ubuntu-ports"
-  # mirror: "http://mirrors.aliyun.com/ubuntu-ports/"
   pocket: updates
   seed:
     urls:
       - "https://git.launchpad.net/~ubuntu-core-dev/ubuntu-seeds/+git/"
     branch: plucky
     names:
-      - desktop
-      - desktop-minimal
       - minimal
       - standard
+  sources-list-deb822: false
 customization:
-  manual:
-    copy-file:
-      - source: tweaks.sh
-        destination: /tweaks.sh 
-    execute:
-      - path: /tweaks.sh
   extra-packages:
     - name: "u-boot-tools"
     - name: "u-boot-menu"
     - name: "ubuntu-desktop-minimal"
     - name: "cloud-initramfs-growroot"
-    - name: "oem-config-gtk"
-    - name: "ubiquity-frontend-gtk"
-    - name: "yaru-theme-unity"
-    - name: "aptdaemon"
-    - name: "initramfs-tools"
-    - name: "localechooser-data"
+    - name: "oem-config-gtk"  # 配置界面核心
     - name: "oem-config"
-    - name: "oem-config-debconf"
-    - name: "ubiquity-slideshow-ubuntu"
+    - name: "libgtk-3-0"  # 界面渲染依赖
+    - name: "cloud-init"  # 仅保留核心依赖，无需多余功能
   extra-snaps:
     - name: snapd
-    - name: bare
-    - name: core22
     - name: core24
-    - name: firefox
-    - name: gnome-42-2204
     - name: gtk-common-themes
-    - name: thunderbird
-# rootfs-tarball:
-#  name: ubuntu-25.04-preinstalled-desktop-arm64.tar.xz
-#  compression: xz
+  manual:
+    copy-file:
+      - source: tweaks.sh
+        destination: /tweaks.sh
+    execute:
+      - path: /tweaks.sh
+  # 最小化 cloud-init 配置（仅触发 oem-config）
+  cloud-init:
+    user-data: |
+      #cloud-config
+      oem-config:
+        enabled: true  # 唯一核心作用：启动 oem-config
+      users:
+        - name: ubuntu  # 给 oem-config 提供默认用户名模板
+          sudo: ALL=(ALL) NOPASSWD:ALL
+# artifacts:
+#  img:
+#    - name: ubuntu-rootfs-arm64.img
+#      volume: ubuntu
